--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+body,html {
+  font-family: 'Inter', sans-serif;
+
+  
+}
+
+*::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px #121212;
+	background-color: #121212;
+}
+
+*::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #1f1f1f;
+}
+
+*::-webkit-scrollbar-thumb
+{
+	background-color: #1f1f1f;
+	border: 2px solid #;
+}
