--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,14 +7,14 @@
       <app-header ></app-header>
 
       <!-- Main Content -->
-      <main class="flex flex-row h-[80%] w-full bg-black px-2 py-1">
+      <main class="flex flex-row h-[80%] w-full  bg-black px-2 py-1">
         <!-- Sidebar -->
         <app-sidebar class="flex flex-col h-full mr-1">
           <app-list-a class="flex flex-col h-full overflow-y-auto"></app-list-a>
         </app-sidebar>
 
         <!-- Router Outlet -->
-        <div class="h-full w-full">
+        <div class="bg-spotify-shadeBlack text-spotify-gray h-full  overflow-hidden rounded-lg w-full">
           <router-outlet></router-outlet>
         </div>
          
