--- a/src/app/core/layout/footer/footer.component.html
+++ b/src/app/core/layout/footer/footer.component.html
@@ -1,22 +1,23 @@
-<footer title="big-screen" class="bg-black hidden fixed bottom-0  sm:flex justify-between items-center p-2 w-full">
+@if(currentTrack){<footer title="big-screen" class="bg-black hidden fixed bottom-0  sm:flex justify-between items-center p-2 w-full">
     <!-- Playing Track -->
     <div class="flex justify-start min-w-max  space-x-4 items-center ">
         <!-- Image -->
-         @if(currentTrack && currentTrack.album && currentTrack.album.images && currentTrack.album.images.length > 0) {
-            <img [src]="currentTrack.album.images[0]?.url || 'https://i.pravatar.cc/300'"
+        @if(currentTrack && currentTrack.album && currentTrack.album.images && currentTrack.album.images.length > 0) {
+        <img [src]="currentTrack.album.images[0]?.url || 'https://i.pravatar.cc/300'"
             [alt]="currentTrack?.name + ' cover'" class="w-14 h-14 object-cover rounded-md" />
-         }@else {
-            <img src="https://i.pravatar.cc/300"
-            [alt]="currentTrack?.name + ' cover'" class="w-14 h-14 object-cover rounded-md" />
-         }
-       
+        }@else {
+        <img src="https://i.pravatar.cc/300" [alt]="currentTrack?.name + ' cover'"
+            class="w-14 h-14 object-cover rounded-md" />
+        }
+
         <!-- Track Info -->
         <div class="flex flex-col">
-            <span class="text-white text-sm">{{ currentTrack?.name || 'Track Name' }}</span>
-            <span class="text-spotify-gray text-xs">{{ artistsString || 'Artist Name' }}</span>
+            <span [routerLink]="['/track', currentTrack?.id]" class="text-white text-sm">{{ currentTrack?.name || 'Track Name' }}</span>
+            <span [routerLink]="['/artist', artistsString]" class="text-spotify-gray text-xs">{{ artistsString || 'Artist Name' }}</span>
         </div>
         <!-- Add to Liked -->
-        <button title="Add to Liked Songs">
+
+        <button *ngIf="checkIsSaved(currentTrack.id) " title="Add to Liked Songs">
             <svg data-encore-id="icon" role="img" aria-hidden="true" class="w-4 h-4" viewBox="0 0 16 16">
                 <path class="fill-spotify-gray hover:fill-white duration-200 "
                     d="M8 1.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"></path>
@@ -33,7 +34,8 @@
         <div
             class="flex items-center justify-center space-x-4 md:space-x-8 lg:space-x-14 w-full sm:w-60 md:w-72 lg:w-80">
             <!-- Shuffle -->
-            <button (click)="toggleShuffle()" title="Shuffle" class="text-spotify-gray  group hover:text-white transition-colors">
+            <button (click)="toggleShuffle()" title="Shuffle"
+                class="text-spotify-gray  group hover:text-white transition-colors">
                 <svg data-encore-id="icon" role="img" aria-hidden="true"
                     class="w-4 h-4 fill-current group-hover:fill-white duration-200" viewBox="0 0 16 16">
                     <path
@@ -46,7 +48,8 @@
             </button>
 
             <!-- Previous Track -->
-            <button (click)="playPreviousTrack()" title="Previous Track" class="text-spotify-gray group hover:text-white transition-colors">
+            <button (click)="playPreviousTrack()" title="Previous Track"
+                class="text-spotify-gray group hover:text-white transition-colors">
                 <svg data-encore-id="icon" role="img" aria-hidden="true" class="w-4 h-4" viewBox="0 0 16 16">
                     <path class="fill-spotify-gray group-hover:fill-white duration-200 "
                         d="M3.3 1a.7.7 0 0 1 .7.7v5.15l9.95-5.744a.7.7 0 0 1 1.05.606v12.575a.7.7 0 0 1-1.05.607L4 9.149V14.3a.7.7 0 0 1-.7.7H1.7a.7.7 0 0 1-.7-.7V1.7a.7.7 0 0 1 .7-.7h1.6z">
@@ -55,17 +58,24 @@
             </button>
 
             <!-- Play/Pause Button -->
-           <button (click)="togglePlay()" title="Play/Pause" class="bg-white p-3 rounded-full">
-                <svg *ngIf="!isPlaying" data-encore-id="icon" role="img" aria-hidden="true" class="w-4 h-4" viewBox="0 0 16 16">
-                    <path d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z"></path>
+            <button (click)="togglePlay()" title="Play/Pause" class="bg-white p-3 rounded-full">
+                <svg *ngIf="!isPlaying" data-encore-id="icon" role="img" aria-hidden="true" class="w-4 h-4"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z">
+                    </path>
                 </svg>
-                <svg *ngIf="isPlaying" data-encore-id="icon" role="img" aria-hidden="true" class="w-4 h-4" viewBox="0 0 16 16">
-                    <path d="M2.7 1a.7.7 0 0 0-.7.7v12.6a.7.7 0 0 0 .7.7h2.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7H2.7zm8 0a.7.7 0 0 0-.7.7v12.6a.7.7 0 0 0 .7.7h2.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7h-2.6z"></path>
+                <svg *ngIf="isPlaying" data-encore-id="icon" role="img" aria-hidden="true" class="w-4 h-4"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M2.7 1a.7.7 0 0 0-.7.7v12.6a.7.7 0 0 0 .7.7h2.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7H2.7zm8 0a.7.7 0 0 0-.7.7v12.6a.7.7 0 0 0 .7.7h2.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7h-2.6z">
+                    </path>
                 </svg>
             </button>
 
             <!-- Next Track -->
-            <button (click)="playNextTrack()" title="Next Track" class="text-spotify-gray group hover:text-white transition-colors">
+            <button (click)="playNextTrack()" title="Next Track"
+                class="text-spotify-gray group hover:text-white transition-colors">
                 <svg data-encore-id="icon" role="img" aria-hidden="true"
                     class="w-4 h-4 rotate-180 fill-current group-hover:fill-white duration-200" viewBox="0 0 16 16">
                     <path
@@ -75,7 +85,8 @@
             </button>
 
             <!-- Repeat -->
-            <button (click)="toggleRepeat()" title="Repeat" class="text-spotify-gray group hover:text-white transition-colors">
+            <button (click)="toggleRepeat()" title="Repeat"
+                class="text-spotify-gray group hover:text-white transition-colors">
                 <svg data-encore-id="icon" role="img" aria-hidden="true"
                     class="h-4 w-4 fill-current group-hover:fill-white duration-200" viewBox="0 0 16 16">
                     <path
@@ -93,8 +104,7 @@
                 class="relative cursor-pointer   group duration-200 w-full h-1 bg-spotify-gray-dark rounded-full">
                 <div class="absolute duration-200 flex items-center justify-end group-hover:bg-spotify-green-light h-full bg-white rounded-full"
                     [style.width.%]="progressPercent()">
-                     <span
-                        class=" p-1.5 z-30  duration-200  absolute translate-x-2  group-hover:bg-white rounded-full">
+                    <span class=" p-1.5 z-30  duration-200  absolute translate-x-2  group-hover:bg-white rounded-full">
                     </span>
                 </div>
 
@@ -119,34 +129,63 @@
             </svg>
         </button>
         <!-- volium  -->
-        <div class="flex felx-row space-x-3 justify-center w-full items-center">
-            <button class="group " (click)="toggleMute()">
-                <svg data-encore-id="icon" role="presentation" aria-label="Volume high" aria-hidden="false"
-                    class="w-4 h-4 fill-spotify-gray group-hover:fill-spotify-green-lighter duration-200"
-                    viewBox="0 0 16 16">
-                    <path class="fill-spotify-gray group-hover:fill-spotify-green-lighter duration-200"
-                        d="M9.741.85a.75.75 0 0 1 .375.65v13a.75.75 0 0 1-1.125.65l-6.925-4a3.642 3.642 0 0 1-1.33-4.967 3.639 3.639 0 0 1 1.33-1.332l6.925-4a.75.75 0 0 1 .75 0zm-6.924 5.3a2.139 2.139 0 0 0 0 3.7l5.8 3.35V2.8l-5.8 3.35zm8.683 4.29V5.56a2.75 2.75 0 0 1 0 4.88z">
-                    </path>
-                    <path class="fill-spotify-gray group-hover:fill-spotify-green-lighter duration-200"
-                        d="M11.5 13.614a5.752 5.752 0 0 0 0-11.228v1.55a4.252 4.252 0 0 1 0 8.127v1.55z"></path>
-                </svg>
-            </button>
-
-            <!-- Bar -->
+        <div class="flex group felx-row space-x-3 justify-center w-full items-center">
+            @if(!isMuted){
+                <button class="group " (click)="toggleMute()">
+                    <svg data-encore-id="icon" role="presentation" aria-label="Volume high" aria-hidden="false"
+                        class="w-4 h-4 fill-spotify-gray group-hover:fill-spotify-green-lighter duration-200"
+                        viewBox="0 0 16 16">
+                        <path class="fill-spotify-gray group-hover:fill-spotify-green-lighter duration-200"
+                            d="M9.741.85a.75.75 0 0 1 .375.65v13a.75.75 0 0 1-1.125.65l-6.925-4a3.642 3.642 0 0 1-1.33-4.967 3.639 3.639 0 0 1 1.33-1.332l6.925-4a.75.75 0 0 1 .75 0zm-6.924 5.3a2.139 2.139 0 0 0 0 3.7l5.8 3.35V2.8l-5.8 3.35zm8.683 4.29V5.56a2.75 2.75 0 0 1 0 4.88z">
+                        </path>
+                        <path class="fill-spotify-gray group-hover:fill-spotify-green-lighter duration-200"
+                            d="M11.5 13.614a5.752 5.752 0 0 0 0-11.228v1.55a4.252 4.252 0 0 1 0 8.127v1.55z"></path>
+                    </svg>
+                </button>
+                    <!-- Bar -->
             <div #volumeBar
-                class="relative cursor-pointer min-w-4  w-full  group duration-200  h-1 bg-spotify-gray-dark rounded-full">
-                <div class="absolute duration-200 flex items-center justify-end group-hover:bg-spotify-green-light h-full bg-white rounded-full"
-                    [style.width.%]="volumePercent"> <span
-                        class=" p-1.5 z-30  duration-200  absolute translate-x-2  group-hover:bg-white rounded-full">
-                    </span></div>
+            class="relative cursor-pointer min-w-4  w-full  group duration-200  h-1 bg-spotify-gray-dark rounded-full">
+            <div class="absolute duration-200 flex items-center justify-end group-hover:bg-spotify-green-light h-full bg-white rounded-full"
+                [style.width.%]="volumePercent"> <span
+                    class=" p-1.5 z-30  duration-200  absolute translate-x-2  group-hover:bg-white rounded-full">
+                </span></div>
 
-            </div>
+        </div>
+            }@else {
+                <button class="group " (click)="toggleMute()">
+                    <svg data-encore-id="icon" role="presentation" aria-label="Volume off" aria-hidden="false"  class="w-4 h-4 fill-spotify-gray group-hover:fill-spotify-green-lighter duration-200"
+                     id="volume-icon" viewBox="0 0 16 16"
+                        >
+                        <path class="fill-spotify-gray group-hover:fill-spotify-green-lighter duration-200"
+                            d="M13.86 5.47a.75.75 0 0 0-1.061 0l-1.47 1.47-1.47-1.47A.75.75 0 0 0 8.8 6.53L10.269 8l-1.47 1.47a.75.75 0 1 0 1.06 1.06l1.47-1.47 1.47 1.47a.75.75 0 0 0 1.06-1.06L12.39 8l1.47-1.47a.75.75 0 0 0 0-1.06z">
+                        </path>
+                        <path class="fill-spotify-gray group-hover:fill-spotify-green-lighter duration-200"
+                            d="M10.116 1.5A.75.75 0 0 0 8.991.85l-6.925 4a3.642 3.642 0 0 0-1.33 4.967 3.639 3.639 0 0 0 1.33 1.332l6.925 4a.75.75 0 0 0 1.125-.649v-1.906a4.73 4.73 0 0 1-1.5-.694v1.3L2.817 9.852a2.141 2.141 0 0 1-.781-2.92c.187-.324.456-.594.78-.782l5.8-3.35v1.3c.45-.313.956-.55 1.5-.694V1.5z">
+                        </path>
+                    </svg>
+                </button>
+                    <!-- Bar -->
+            <div #volumeBar
+            class="relative cursor-pointer min-w-4  w-full  group duration-200  h-1 bg-spotify-gray-dark rounded-full">
+            <div class="absolute duration-200 flex items-center justify-end group-hover:bg-spotify-green-light h-full bg-white rounded-full"
+                [style.width.%]="0"> <span
+                    class=" p-1.5 z-30  duration-200  absolute translate-x-2  group-hover:bg-white rounded-full">
+                </span></div>
+
+        </div>
+            }
+           
+       
+
+
+         
 
 
         </div>
     </div>
 
-</footer>
+</footer>}@else{}
+
 <footer title="small-screen" class="bg-black p-4 flex sm:hidden justify-between items-center fixed   bottom-0 w-full">
     <button title="home" class="flex justify-center items-center flex-col">
         <svg data-encore-id="icon" role="img" aria-hidden="true" class="w-6 h-6" viewBox="0 0 24 24">
@@ -175,4 +214,4 @@
         <span class="text-spotify-gray text-sm">Library</span>
     </button>
 
-</footer>   
+</footer>
